syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.javainuse.item";
package items;

message ItemDTO {
  string name = 1;
  string description = 2;
  int32 quantity_in_store = 3;
}

message Item {
  string itemId = 1;
  string itemName = 2;
  string description = 3;
  int32 quantity_in_store = 4;
}

message ItemList {
  repeated Item items = 1;
}

service ItemService {
  rpc createItem(ItemDTO) returns (Item);

  rpc editItem(Item) returns (google.protobuf.Empty);

  rpc deleteItem(Item) returns (google.protobuf.Empty);

  rpc getAllItems(google.protobuf.Empty) returns (ItemList);

}